# hr_rss

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  README.md  pyproject.toml  run.bat  run_report.bat
.claude/: settings.json  statusline.py
.claude/skills/doc-sync-check/: SKILL.md
.claude/skills/feed-selector/: SKILL.md
.claude/skills/tdd/: SKILL.md
.github/workflows/: slack-issue-notification.yml
config/: exclude_keywords.sample.yaml  feeds.sample.yaml  feeds.yaml  labels.sample.yaml  labels.yaml  prompts.sample.yaml
config/profiles/competitive_ai/: exclude_keywords.yaml  feeds.yaml  labels.yaml  prompts.yaml
config/profiles/market_research/: exclude_keywords.yaml  feeds.yaml  labels.yaml  prompts.yaml
docs/: check_feeds.md  configuration.md
output/sample/: output_20260405_all.html  sample.html
scripts/: check_feeds.py  update_sample.py
src/hr_rss/: __main__.py  _constants.py  config.py  db.py  fetcher.py  filter.py  llm.py  renderer.py  scraper.py
tests/: conftest.py  test_config.py  test_conftest_fixtures.py  test_db.py  test_fetcher.py  test_filter.py  test_llm.py  test_main.py  test_main_report.py  test_renderer.py  test_scraper.py
